docs: update README and deployment workflow